--- a/EPath-v0.0.1/Base.lproj/Main.storyboard
+++ b/EPath-v0.0.1/Base.lproj/Main.storyboard
@@ -96,71 +96,72 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8Ca-hB-ABP">
-                                <rect key="frame" x="20" y="168" width="353" height="112"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="112" id="gR6-sb-Sv2"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Byd-YO-9ib">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Byd-YO-9ib">
                                 <rect key="frame" x="20" y="123" width="353" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="S6Z-CR-Ukd"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="DESC" textAlignment="justified" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r2Y-QI-LbM">
-                                <rect key="frame" x="20" y="300" width="353" height="197"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <color key="textColor" systemColor="labelColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5fM-4S-TGO">
-                                <rect key="frame" x="159" y="715" width="75" height="35"/>
+                                <rect key="frame" x="159" y="715" width="59.666666666666657" height="35"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="Send">
+                                <buttonConfiguration key="configuration" style="filled" title="Next">
                                     <color key="baseBackgroundColor" systemColor="systemIndigoColor"/>
                                 </buttonConfiguration>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="EKw-dG-GWB">
-                                <rect key="frame" x="20" y="536" width="353" height="163"/>
+                                <rect key="frame" x="20" y="535" width="353" height="164"/>
                                 <color key="backgroundColor" red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="0.29809736394557823" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Response:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kjs-rk-UHz">
-                                <rect key="frame" x="20" y="507" width="353" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Thoughts" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kjs-rk-UHz">
+                                <rect key="frame" x="133" y="506.33333333333326" width="111.66666666666669" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="Dn7-xa-sVZ"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="pngtree-thought-bubble-vector-png-image_15263871" translatesAutoresizingMaskIntoConstraints="NO" id="quU-8m-3ll">
+                                <rect key="frame" x="-18" y="90" width="429" height="486"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default"/>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Desc" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="5NQ-fX-48n">
+                                <rect key="frame" x="52" y="235" width="289" height="152"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="fY5-lb-KEk"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="EKw-dG-GWB" firstAttribute="leading" secondItem="fY5-lb-KEk" secondAttribute="leading" constant="20" id="7BY-pN-rYO"/>
-                            <constraint firstItem="EKw-dG-GWB" firstAttribute="top" secondItem="Kjs-rk-UHz" secondAttribute="bottom" constant="8" symbolic="YES" id="CAK-tY-dYc"/>
-                            <constraint firstItem="fY5-lb-KEk" firstAttribute="trailing" secondItem="Byd-YO-9ib" secondAttribute="trailing" constant="20" id="EOf-MH-lR2"/>
-                            <constraint firstItem="fY5-lb-KEk" firstAttribute="bottom" secondItem="5fM-4S-TGO" secondAttribute="bottom" constant="19" id="EqO-1Z-4qr"/>
-                            <constraint firstItem="5fM-4S-TGO" firstAttribute="top" secondItem="EKw-dG-GWB" secondAttribute="bottom" constant="16" id="FtD-Bk-4R0"/>
-                            <constraint firstItem="5fM-4S-TGO" firstAttribute="leading" secondItem="fY5-lb-KEk" secondAttribute="leading" constant="159" id="ILo-He-80m"/>
-                            <constraint firstItem="fY5-lb-KEk" firstAttribute="bottom" secondItem="r2Y-QI-LbM" secondAttribute="bottom" constant="272" id="Ktc-pe-Nqq"/>
-                            <constraint firstItem="8Ca-hB-ABP" firstAttribute="top" secondItem="Byd-YO-9ib" secondAttribute="bottom" constant="24" id="NmZ-BP-AxL"/>
-                            <constraint firstItem="fY5-lb-KEk" firstAttribute="trailing" secondItem="5fM-4S-TGO" secondAttribute="trailing" constant="159" id="PkH-T1-Z7t"/>
-                            <constraint firstItem="fY5-lb-KEk" firstAttribute="trailing" secondItem="Kjs-rk-UHz" secondAttribute="trailing" constant="20" id="Rhs-cv-XLw"/>
-                            <constraint firstItem="8Ca-hB-ABP" firstAttribute="leading" secondItem="fY5-lb-KEk" secondAttribute="leading" constant="20" id="YA7-PU-WLm"/>
-                            <constraint firstItem="fY5-lb-KEk" firstAttribute="trailing" secondItem="8Ca-hB-ABP" secondAttribute="trailing" constant="20" id="YLp-r1-VeF"/>
-                            <constraint firstItem="r2Y-QI-LbM" firstAttribute="leading" secondItem="fY5-lb-KEk" secondAttribute="leading" constant="20" id="ZU3-LU-Gka"/>
-                            <constraint firstItem="Kjs-rk-UHz" firstAttribute="top" secondItem="r2Y-QI-LbM" secondAttribute="bottom" constant="10" id="b95-zL-sZq"/>
-                            <constraint firstItem="Kjs-rk-UHz" firstAttribute="leading" secondItem="fY5-lb-KEk" secondAttribute="leading" constant="20" id="btw-CH-amr"/>
-                            <constraint firstItem="r2Y-QI-LbM" firstAttribute="top" secondItem="8Ca-hB-ABP" secondAttribute="bottom" constant="20" id="gML-sD-wTh"/>
-                            <constraint firstItem="Byd-YO-9ib" firstAttribute="leading" secondItem="fY5-lb-KEk" secondAttribute="leading" constant="20" id="l0g-T9-sy9"/>
-                            <constraint firstItem="fY5-lb-KEk" firstAttribute="trailing" secondItem="EKw-dG-GWB" secondAttribute="trailing" constant="20" id="lsT-cs-puG"/>
-                            <constraint firstItem="Byd-YO-9ib" firstAttribute="top" secondItem="fY5-lb-KEk" secondAttribute="top" constant="20" id="oag-cq-EFf"/>
-                            <constraint firstItem="fY5-lb-KEk" firstAttribute="trailing" secondItem="r2Y-QI-LbM" secondAttribute="trailing" constant="20" id="pna-q2-8Oj"/>
-                            <constraint firstItem="fY5-lb-KEk" firstAttribute="bottom" secondItem="8Ca-hB-ABP" secondAttribute="bottom" constant="489" id="wBY-Pa-Vxn"/>
+                            <constraint firstItem="5NQ-fX-48n" firstAttribute="leading" secondItem="fY5-lb-KEk" secondAttribute="leading" constant="52" id="4ZR-TQ-J1V"/>
+                            <constraint firstItem="fY5-lb-KEk" firstAttribute="trailing" secondItem="Kjs-rk-UHz" secondAttribute="trailing" constant="148.33333333333331" id="5xs-wy-qCc"/>
+                            <constraint firstItem="EKw-dG-GWB" firstAttribute="top" secondItem="Kjs-rk-UHz" secondAttribute="bottom" constant="7.6666666666667425" id="9RH-w5-l4w"/>
+                            <constraint firstItem="Byd-YO-9ib" firstAttribute="top" secondItem="fY5-lb-KEk" secondAttribute="top" constant="20" id="DxH-SH-94F"/>
+                            <constraint firstItem="5NQ-fX-48n" firstAttribute="top" secondItem="Byd-YO-9ib" secondAttribute="bottom" constant="91" id="Jcb-wu-6ZW"/>
+                            <constraint firstItem="5fM-4S-TGO" firstAttribute="top" secondItem="EKw-dG-GWB" secondAttribute="bottom" constant="16" id="NRM-rM-KoH"/>
+                            <constraint firstItem="EKw-dG-GWB" firstAttribute="leading" secondItem="fY5-lb-KEk" secondAttribute="leading" constant="20" id="TaX-aI-hwQ"/>
+                            <constraint firstItem="Kjs-rk-UHz" firstAttribute="top" secondItem="5NQ-fX-48n" secondAttribute="bottom" constant="119.33333333333326" id="Vee-ny-ZRd"/>
+                            <constraint firstItem="Byd-YO-9ib" firstAttribute="centerX" secondItem="de5-b6-uvX" secondAttribute="centerX" id="XOH-ps-ioA"/>
+                            <constraint firstItem="fY5-lb-KEk" firstAttribute="trailing" secondItem="EKw-dG-GWB" secondAttribute="trailing" constant="20" id="b3e-Ub-Ntc"/>
+                            <constraint firstItem="Byd-YO-9ib" firstAttribute="leading" secondItem="fY5-lb-KEk" secondAttribute="leading" constant="20" id="dJt-PE-W1B"/>
+                            <constraint firstAttribute="bottom" secondItem="Kjs-rk-UHz" secondAttribute="bottom" constant="324.66666666666674" id="gW9-na-e3q"/>
+                            <constraint firstItem="fY5-lb-KEk" firstAttribute="trailing" secondItem="5fM-4S-TGO" secondAttribute="trailing" constant="174.33333333333334" id="gfd-vf-yIt"/>
+                            <constraint firstItem="5fM-4S-TGO" firstAttribute="leading" secondItem="fY5-lb-KEk" secondAttribute="leading" constant="159" id="kS2-Tv-2cM"/>
+                            <constraint firstItem="fY5-lb-KEk" firstAttribute="bottom" secondItem="5fM-4S-TGO" secondAttribute="bottom" constant="19" id="lFs-5I-swi"/>
+                            <constraint firstItem="fY5-lb-KEk" firstAttribute="trailing" secondItem="5NQ-fX-48n" secondAttribute="trailing" constant="52" id="nCb-j1-gpc"/>
+                            <constraint firstItem="Kjs-rk-UHz" firstAttribute="leading" secondItem="fY5-lb-KEk" secondAttribute="leading" constant="133" id="xMW-BL-QgX"/>
                         </constraints>
                         <connections>
                             <outletCollection property="gestureRecognizers" destination="w0c-9d-BXR" appends="YES" id="Dcb-lP-JG6"/>
@@ -168,9 +169,8 @@
                     </view>
                     <navigationItem key="navigationItem" id="eWK-0a-oh5"/>
                     <connections>
-                        <outlet property="img_Detail" destination="8Ca-hB-ABP" id="zyP-uy-B1O"/>
                         <outlet property="lbl_Detail_Title" destination="Byd-YO-9ib" id="D6J-M1-YgP"/>
-                        <outlet property="txt_Detail_Description" destination="r2Y-QI-LbM" id="nkw-Ic-LHK"/>
+                        <outlet property="txt_Detail_Description" destination="5NQ-fX-48n" id="g4u-xp-PH6"/>
                         <outlet property="txt_Detail_Response" destination="EKw-dG-GWB" id="lLu-ar-wmQ"/>
                     </connections>
                 </viewController>
@@ -248,6 +248,7 @@
         <image name="house.fill" catalog="system" width="128" height="104"/>
         <image name="person.3" catalog="system" width="128" height="66"/>
         <image name="person.3.fill" catalog="system" width="128" height="66"/>
+        <image name="pngtree-thought-bubble-vector-png-image_15263871" width="833.33331298828125" height="833.33331298828125"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
@@ -255,19 +256,19 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemBlueColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemIndigoColor">
-            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemPurpleColor">
-            <color red="0.68627450980392157" green="0.32156862745098042" blue="0.87058823529411766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
